k8s/payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: academyio-payments
  namespace: academyio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: academyio-payments
  template:
    metadata:
      labels:
        app: academyio-payments
    spec:
      containers:
        - name: payments
          image: brenodev29/academyio:payments
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: academyio-payments
  namespace: academyio
spec:
  selector:
    app: academyio-payments
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
